--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,11 +64,13 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["agents", "clients", "config", "domain", "services", "tools", "utils", "templates"]
+packages = ["clients", "config", "domain", "services", "tools", "utils", "templates"]
 
 [tool.ruff]
 line-length = 88
 target-version = "py311"
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
