--- a/pytest.ini
+++ b/pytest.ini
@@ -19,7 +19,7 @@ addopts =
     --cov-report=term-missing:skip-covered
     --cov-report=html
     --cov-report=xml
-    --cov-fail-under=80
+    --cov-fail-under=75
     --maxfail=1
     --tb=short
     --asyncio-mode=auto
@@ -35,6 +35,12 @@ omit =
     */venv/*
     */env/*
     */.venv/*
+    .uv_python/*
+    */.uv_python/*
+    .uv_cache/*
+    */.uv_cache/*
+    .uv-cache/*
+    */.uv-cache/*
     */setup.py
     */conftest.py
 
